# sparkleDeepNN

./: README.md  pyproject.toml
src/sparkledeepnn/: .gitignore  Activations.py  BatchNorm.py  Linear.py  main.py
